# CS_Study

./: .gitignore  LICENSE  README.md
C++_study/: code.cpp
C++_study/c++base/: 杂项.md
C++_study/c++base/c++多线程/: 多线程.md
C++_study/cpp_test/: CMakeLists.txt  test  test.cpp  test1.cpp  test_polymorphism.cpp
C++_study/leetcode/: 输入输出.md
C++_study/leetcode/leetcode101/: 刷题记录.md
robotics/: 面试.md
robotics/Communication_middleware/: lcm.md
robotics/RL/: PPO_37_implementation.md  README.md  RL.md  dissusion_model.md  imitation_learning.md
robotics/ROS/: ros_record.md
robotics/ROS/files/urdf/: head.xacro  k331.gazebo  k331.urdf.xacro  k331_robot.urdf.xacro  sensors.urdf.xacro
robotics/ROS/files/urdf/sensors/: intel_realsense.urdf.xacro
robotics/SLAM/: lio-sam.md
robotics/path_planning/: LQR.md  control.md  convex_optimization.md  cublic_spline.md  eigen.md  fast-planner.md  interpoint.py  pure_pursuit.md  杂项.md
robotics/path_planning/apollo/: apollo2024.md  em_planner.md  杂记.md
robotics/path_planning/apollo/简单教程/: 简单教程.md
robotics/path_planning/control/: pid.md
robotics/path_planning/shenlan-motion-planning/: record.md
tools/cmake/: cmake.md
tools/docker/: README.md
tools/git/: git&&github.md
tools/linux/: 杂项.md
